refactor: update api docs & video model
